--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -6,3 +6,5 @@ WORKDIR /fish
 
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
 RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
+
+RUN apt update && apt install vim -y
